--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
     <title>Site de calorias</title>
 </head>
 <body>
-    <form action="">
-        <label for=""></label>
-        <input type="number" placeholder="Coloque quantos Km você pecorreu">
-        <label for=""></label>
-        <input type="number">
+
+    <section>
+    <form action="/" id="formulario">
+        <label for="km">Km:</label>
+        <input id="km" type="number" placeholder="Coloque quantos Km você pecorreu">
+        <label for="peso">Peso:</label>
+        <input id="peso" type="number" placeholder="Coloque seu peso">
         <input type="submit" value="Enviar">
     </form>
+    </section>
 
     <script src="assets/js/index.js"></script>
 </body>
