--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
 
-    <section>
+    <section id="container">
     <form action="/" id="formulario">
         <label for="km">Km:</label>
         <input id="km" type="number" placeholder="Coloque quantos Km você pecorreu">
         <label for="peso">Peso:</label>
         <input id="peso" type="number" placeholder="Coloque seu peso">
-        <input type="submit" value="Enviar">
+        <button>Enviar</button>
     </form>
     </section>
 
