Design do input atualizado

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <section id="container">
     <form action="/" id="formulario">
         <label for="km">Km:</label>
-        <input id="km" type="number" placeholder="Coloque quantos Km você pecorreu">
+        <input id="km" name="km" type="number" placeholder="Coloque quantos Km você pecorreu">
         <label for="peso">Peso:</label>
-        <input id="peso" type="number" placeholder="Coloque seu peso">
+        <input id="peso" name="peso" type="number" placeholder="Coloque seu peso">
         <button>Enviar</button>
     </form>
     </section>
