--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <input id="peso" name="peso" type="number" placeholder="Coloque seu peso">
         <button>Enviar</button>
     </form>
+
+    <div id="resultado"></div>
     </section>
 
     <script src="assets/js/index.js"></script>
