Adicionado os minutos

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <section id="container">
     <form action="/" id="formulario">
         <label for="km">Km:</label>
-        <input id="km" name="km" type="text" placeholder="Coloque quantos Km você pecorreu">
+        <input id="km" name="km" type="text" placeholder="Coloque quantos Km pecorreu">
+        <label for="horas">Horas:</label>
+        <input id="horas" name="horas" type="text" placeholder="Coloque quantas horas pecorreu">
         <label for="peso">Peso:</label>
         <input id="peso" name="peso" type="text" placeholder="Coloque seu peso">
         <button>Enviar</button>
