h1 adicionado e design feito

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 
     <section id="container">
+        <h1>Calcule quantas calorias perdeu</h1>
     <form action="/" id="formulario">
         <label for="km">Km:</label>
         <input id="km" name="km" type="text" placeholder="Coloque quantos Km pecorreu">
